<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
            android:id="@+id/tool_bar"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/timeline_bar" android:layout_alignParentTop="true">
        <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:id="@+id/marker_button" android:layout_gravity="left|center_vertical"
                android:src="@drawable/marker" android:scaleType="fitCenter" android:contentDescription="@string/marker"/>
        <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:text="@string/eraser"
                android:id="@+id/eraser_button" android:layout_gravity="left|center_vertical"
                android:src="@drawable/eraser" android:scaleType="fitCenter" android:contentDescription="@string/eraser"/>
        <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:text="@string/lasso"
                android:id="@+id/lasso_button" android:layout_gravity="left|center_vertical"
                android:scaleType="fitCenter" android:src="@drawable/lasso" android:contentDescription="@string/lasso"/>
        <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:text="@string/rotate"
                android:id="@+id/rotate_button" android:layout_gravity="left|center_vertical"
                android:scaleType="fitCenter" android:src="@drawable/rotate" android:contentDescription="@string/rotate"/>
        <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:text="@string/scale"
                android:id="@+id/scale_button" android:layout_gravity="left|center_vertical"
                android:scaleType="fitCenter" android:src="@drawable/scale" android:contentDescription="@string/scale"/>
        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/animate_button" android:layout_gravity="center" android:checked="false"
                android:textOn="Animate" android:textOff="Don't Animate"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_button" android:layout_gravity="center" android:checked="false"
                android:text="Settings"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/timeline_bar"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_alignParentBottom="true">
        <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Play"
                android:id="@+id/play_button" android:layout_gravity="left|center_vertical"/>
        <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/timeline_slider" android:layout_marginLeft="51dp" android:layout_weight="0.92"
                android:max="100" android:progress="0" android:indeterminate="false"/>
    </LinearLayout>
    <quickmotion.android.QuickMotionView
            android:layout_width="fill_parent"
            android:layout_height="145dp"
            android:layout_above="@id/timeline_bar"
            android:id="@+id/mainView" android:focusable="true" android:clickable="true"
            android:focusableInTouchMode="true" android:longClickable="true"
            android:layout_below="@+id/tool_bar"/>
</RelativeLayout>

